...
                        modifier = Modifier.weight(1f),
                    )
                    TextButton(
                        onClick = {
                            updateSubgroups(subgroups + RollSubgroup(
                                id = UUID.randomUUID().toString(),
                                expression = "1d6",
                            ))
                        },
                    ) {
                        Icon(Icons.Rounded.Add, contentDescription = stringResource(R.string.add_subgroup))
                    }
                }
...
